# 3dslicer-ext

./: JackalCraniometry_HOWTO.docx  README.md
BoneR/BoneR/BoneR/: BoneR.py  CMakeLists.txt
BrokenHeart/BrokenHeart/: CMakeLists.txt
BrokenHeart/BrokenHeart/BrokenHeart/: BrokenHeart.py  CMakeLists.txt
BrokenHeart/BrokenHeart/BrokenHeart/Resources/UI/: BrokenHeart.ui
ChickenDeLivery/ChickenDeLivery/: CMakeLists.txt  ChickenDeLivery.xcf
ChickenDeLivery/ChickenDeLivery/ChickenDeLivery/: CMakeLists.txt  ChickenDeLivery.py
ChickenDeLivery/ChickenDeLivery/ChickenDeLivery/Resources/UI/: ChickenDeLivery.ui
CustomFilters/: icon.xcf
CustomFilters/CustomFilters/: CMakeLists.txt
CustomFilters/CustomFilters/CustomFilters/: CMakeLists.txt  CustomFilters.py
CustomFilters/CustomFilters/CustomFilters/Resources/UI/: CustomFilters.ui  DoGFilter.ui
CustomFilters/CustomFilters/CustomFilters/my_filters/: __init__.py  adjustablePlotter.py  autocropFilter.py  customFilter.py  differenceOfGaussiansFilter.py  dtype_handling.py  dummyFilter.py  interactiveHistogram.py  linearIntensityTransformFilter.py  myPlotter.py  paraview_preprocessing_filter.py  rankDownsampleFilter.py  simplePlotter.py
DeerSegmentor/deer_segmentor/: CMakeLists.txt
DeerSegmentor/deer_segmentor/DeerSegmentor/: CMakeLists.txt  DeerSegmentor.py  batch_exporter.py
DeerSegmentor/deer_segmentor/DeerSegmentor/Resources/UI/: DeerSegmentor.ui
FishMorophometry/FishMorphometry/: CMakeLists.txt
FishMorophometry/FishMorphometry/FishMorphometry/: CMakeLists.txt  FishMorphometry.py
FishMorophometry/FishMorphometry/FishMorphometry/Resources/UI/: FishMorphometry.ui
JackalCraniometry/: JackalCraniometry_HOWTO.docx
JackalCraniometry/JackalCraniometry/JackalCraniometry/: JackalCraniometry.py
JackalCraniometry/logo/: logo.xcf
PigChunker/PigChunker/PigChunker/: PigChunker.py
PigletSegmentor/PigletSegmentor/: CMakeLists.txt
PigletSegmentor/PigletSegmentor/PigletSegmentor/: PigletSegmentor.py
RTCompare/RTCompare/: CMakeLists.txt
RTCompare/RTCompare/RTCompare/: CMakeLists.txt  RTCompare.py
RTCompare/RTCompare/RTCompare/Resources/UI/: RTCompare.ui
RTCompare/RTCompare/RTCompare/utils/: RTCompare_config.py  custom_segement_stats.py  load_rt_sctructure.py  open_folder.py  rt_structure_to_segment.py  show_table.py
Rabbit2Segment/: rabbit2seg_init.py
Rabbit2Segment/Rabbit2Segment/: CMakeLists.txt
Rabbit2Segment/Rabbit2Segment/Rabbit2Segment/: CMakeLists.txt  Rabbit2Segment.py
Rabbit2Segment/Rabbit2Segment/Rabbit2Segment/Resources/UI/: Rabbit2Segment.ui
RabbitVertCount/RabbitVertCount/: CMakeLists.txt
RabbitVertCount/RabbitVertCount/RabbitVertCount/: CMakeLists.txt  RabbitVertCount.py
RabbitVertCount/RabbitVertCount/RabbitVertCount/Resources/UI/: RabbitVertCount.ui
SegmentPet/: rabbit_pet_init.py
SegmentPet/SegmentPet/: CMakeLists.txt
SegmentPet/SegmentPet/SegmentPet/: CMakeLists.txt  SegmentPet.py
SegmentPet/SegmentPet/SegmentPet/Resources/UI/: SegmentPet.ui
SegmentPet/logo/: PetSegemntor.xcf
